--- a/src/index.html
+++ b/src/index.html
@@ -4,31 +4,41 @@
   <meta charset="utf-8">
   <meta name="format-detection" content="telephone=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-  <title>Animations with Angular</title>
+  <title>Animations in Angular</title>
   <link rel="stylesheet" href="css/style.css">
+<!--   <link href='http://fonts.googleapis.com/css?family=Roboto:300,400' rel='stylesheet' type='text/css'> -->
 </head>
 <body ontouchstart>
 
-  <div ng-controller="appController">
+  <section ng-controller="startController">
+    <a href="#/" title="AngularJS" class="angular-logo">
+      <svg xmlns="http://www.w3.org/2000/svg" width="100" height="106">
+        <polygon fill="#B3B3B3" points="49.8,0 0,17.5 7.9,82.8 49.9,105.9 92.1,82.5 100,17.2"/>
+        <polygon fill="#A6120D" points="95,21 49.7,5.6 49.7,100.4 87.7,79.4"/>
+        <polygon fill="#DD1B16" points="5.6,21.3 12.3,79.7 49.7,100.4 49.7,5.6"/>
+        <g>
+          <polygon fill="#F2F2F2" points="49.7,61.9 49.7,52.8 50.2,52.8 49.7,52.7 40.6,52.7 49.8,31 49.8,31 49.7,9 18.9,77.6 30.4,77.3 36.6,61.9 49.7,61.9 49.8,61.9"/>
+          <polygon fill="#F2F2F2" points="49.7,9 49.7,9 49.7,9"/>
+        </g>
+        <polygon fill="#B3B3B3" points="49.7,9 49.8,31 60.2,52.8 49.7,52.8 49.7,61.9 64.2,61.9 71,77.6 82,77.8"/>
+      </svg>
+    </a>
 
-    <button type="button" ng-click="boots()">hi</button>
-    <div class="boots" ng-class="{'fade-in-ani': isBootsShowing}"></div>
-    <div class="shoes" ng-class="{'move-over-ani': isBootsShowing}"></div>
+    <h1 class="tc">AngularJS Exercises</h1>
 
-<!--     <p>There are {{feed.length}} posts here.</p>
-    <input type="search" ng-model="q" placeholder="filter posts...">
-    <ul>
-      <li ng-repeat="post in feed | filter:q">
-        <h2>{{post.name}} to {{post.to}}</h2>
-        <h4>{{post.time}}</h3>
-        <p>{{post.post}}</p>
-      </li>
-    </ul> -->
+    <ul class="nav">
+      <li><a ng-class="{on :isActive('/1')}" href="#/1">1</a></li>
+      <li><a ng-class="{on :isActive('/2')}" href="#/2">2</a></li>
+      <li><a ng-class="{on :isActive('/3')}" href="#/3">3</a></li>
+      <li><a ng-class="{on :isActive('/4')}" href="#/4">4</a></li>
+    </ul>
+  </section>
 
-  </div>
+  <ng-view></ng-view>
 
-<script type="text/javascript" src="js/libs.js"></script>
-<script type="text/javascript" src="js/scripts.js"></script>
+  <script type="text/javascript" src="js/libs.js"></script>
+  <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
