--- a/src/html/e0.html
+++ b/src/html/e0.html
@@ -1,3 +1,4 @@
 <section class="container">
-  <h3 class="tc">Welcome <big>☺</big></h3>
+  <h1 class="tc">Welcome</h1>
+  <p class="tc">Please choose an exercise <big>☺</big></p>
 </section>
