--- a/src/html/e2.html
+++ b/src/html/e2.html
@@ -1,7 +1,7 @@
 <section class="container">
 
   <article>
-    <h2 class="tc">ng-swipe-left &amp; ng-swipe-right</h2>
+    <h1>ng-swipe-left &amp; ng-swipe-right</h1>
     <p>Make the sqaures cycle back and forth. You can do this by adding <b>ng-swipe-left</b> to the first square and <b>ng-swipe-right</b> to second. Then add a <b>ng-class</b> to each sqaure to call out the animations and expression.</p>
   </article>
 
