--- a/src/html/e4.html
+++ b/src/html/e4.html
@@ -1,7 +1,7 @@
 <section class="container">
 
   <article>
-    <h2 class="tc">Subtitle</h2>
+    <h1>Subtitle</h1>
     <p>(what to do)</p>
   </article>
 
