--- a/src/html/e1.html
+++ b/src/html/e1.html
@@ -1,17 +1,13 @@
 <section class="container">
 
   <article>
-    <h2 class="tc">ng-class &amp; ng-click</h2>
-    <p class="tc">Make the orange box appear using <b>ng-class</b> and <b>ng-click</b>.</p>
+    <h1>ng-class &amp; ng-click</h1>
+    <p>Make the orange box appear using <b>ng-class</b> and <b>ng-click</b>.</p>
   </article>
 
   <article>
-    <div class="box orange" ng-class="{'fade-in-ani': isOrange}"></div>
-    <button type="button" ng-click="orange()">go</button>
-  </article>
-
-  <article>
-    <div class="box green" ng-class="{'fade-in-ani': !isOrange}"></div>
+    <div class="box orange" ng-class=""></div>
+    <button type="button" ng-click="">show</button>
   </article>
 
 </section>
