--- a/src/html/e3.html
+++ b/src/html/e3.html
@@ -2,11 +2,16 @@
 
   <article>
     <h1>ng-repeat &amp; ng-model</h1>
-    <p>List the provided JSON data using <b>ng-repeat</b> and filter search using the input as an <b>ng-model</b>.</p>
+    <p>Show the provided JSON data using <b>ng-repeat</b> and <em>filter</em> the results using the input as the <b>ng-model</b>. Add <b>ng-show</b> and <b>ng-hide</b> animations.</p>
   </article>
 
   <article>
     <input type="text" placeholder="Search">
+    <ul class="listview">
+      <li>
+        <a href title=""></a>
+      </li>
+    </ul>
   </article>
 
 </section>
