--- a/src/html/e2.html
+++ b/src/html/e2.html
@@ -17,7 +17,7 @@
           <h4>Autobot Commander</h4>
         </section>
 
-        <!-- slide 2
+        <!-- slide 2 -->
         <section class="slide-02" ng-class="">
           <p class="quote">"Freedom is the right<br>of all sentient beings."</p>
           <div class="grid">
@@ -40,7 +40,7 @@
               </li>
             </ul>
           </div>
-        </section> -->
+        </section>
 
         <!-- page indicators -->
         <ul class="page-indicators">
