--- a/src/html/e1.html
+++ b/src/html/e1.html
@@ -6,8 +6,8 @@
   </article>
 
   <article>
-    <div class="box orange" ng-class=""></div>
-    <button type="button" ng-click="">show</button>
+    <div class="box orange" ng-class="{'': }"></div>
+    <button type="button" ng-click="()">show</button>
   </article>
 
 </section>
