--- a/src/html/e2.html
+++ b/src/html/e2.html
@@ -8,17 +8,17 @@
   <article>
 
     <div class="phone-container">
-      <header class="autobot" ng-swipe-left="" ng-swipe-right="">
+      <header class="autobot" ng-swipe-left="()" ng-swipe-right="()">
 
         <!-- slide 1 -->
-        <section class="slide-01" ng-class="">
+        <section class="slide-01" ng-class="{'': }">
           <img src="img/optimus.jpg" alt="Optimus Prime" width="70">
           <h2>Optimus Prime</h2>
           <h4>Autobot Commander</h4>
         </section>
 
         <!-- slide 2 -->
-        <section class="slide-02" ng-class="">
+        <section class="slide-02" ng-class="{'': }">
           <p class="quote">"Freedom is the right<br>of all sentient beings."</p>
           <div class="grid">
             <ul>
@@ -44,8 +44,8 @@
 
         <!-- page indicators -->
         <ul class="page-indicators">
-          <li ng-class=""></li>
-          <li ng-class=""></li>
+          <li ng-class="{'': }"></li>
+          <li ng-class="{'': }"></li>
         </ul>
 
       </header>
