--- a/src/html/e3.html
+++ b/src/html/e3.html
@@ -6,10 +6,10 @@
   </article>
 
   <article>
-    <input type="text" placeholder="Search">
+    <input type="text" placeholder="Search" ng-model="">
     <ul class="listview">
-      <li>
-        <a href title=""></a>
+      <li ng-repeat="" ng-class="{'': }">
+        <a href title="">}</a>
       </li>
     </ul>
   </article>
